push consultant_id from token
